--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "stealth-browser-mcp"
-version = "1.0.0"
+version = "0.2.4"
 description = "Ultimate undetectable browser automation MCP server with CDP-level access"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -19,6 +19,8 @@ dependencies = [
     "jsbeautifier==1.15.4",
     "strinpy==0.0.4",
     "strbuilder==1.1.3",
+    "psutil==7.0.0",
+    "pillow==11.3.0",
 ]
 
 # Development dependencies (optional)
