--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ py2js @ git+https://github.com/am230/py2js.git@31a83c7c25a51ab0cc3255f484a2279d2
 jsbeautifier==1.15.4
 strinpy==0.0.4
 strbuilder==1.1.3
-fastapi>=0.100.0
-uvicorn[standard]>=0.20.0
+uvicorn[standard]==0.35.0
+psutil==7.0.0
+pillow==11.3.0
