Fix: Remove invalid @mcp.get decorator, use root path for health check
- Remove @mcp.get('/health') which doesn't exist in FastMCP
- Use root path '/' for health checks instead
- FastMCP will handle root endpoint automatically

--- a/render.yaml
+++ b/render.yaml
@@ -18,5 +18,5 @@ services:
         value: "8000"
       - key: LOG_LEVEL
         value: "INFO"
-    healthCheckPath: /health
+    healthCheckPath: /
     autoDeploy: true
