Simplify: Remove custom health check, use FastMCP built-in /health endpoint

--- a/render.yaml
+++ b/render.yaml
@@ -9,6 +9,7 @@ services:
     dockerfilePath: ./Dockerfile
     dockerContext: .
     numInstances: 1
+    healthCheckPath: /health
     envVars:
       - key: PYTHONUNBUFFERED
         value: "1"
